src-tauri/cargo_check_err_cloud.log
    Checking mdownloader v0.2.0 (D:\WorkStation\IDM\src-tauri)
warning: unused import: `windows_sys::Win32::System::IO::DeviceIoControl`
  --> src\engine\sniffing\handle.rs:10:5
   |
10 | use windows_sys::Win32::System::IO::DeviceIoControl;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
System.Management.Automation.RemoteException
warning: unused doc comment
 --> src\engine\sniffing\orchestrator.rs:9:1
  |
9 | /// Global cache to prevent duplicate HUD triggers within a window.
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ rustdoc does not generate documentation for macro invocations
  |
  = help: to document an item produced by a macro, the macro must produce the documentation as part of its expansion
  = note: `#[warn(unused_doc_comments)]` (part of `#[warn(unused)]`) on by default
System.Management.Automation.RemoteException
warning: unused import: `std::collections::HashMap`
 --> src\engine\sniffing\orchestrator.rs:2:5
  |
2 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
System.Management.Automation.RemoteException
warning: unused import: `Manager`
 --> src\engine\sniffing\orchestrator.rs:3:24
  |
3 | use tauri::{AppHandle, Manager, Emitter};
  |                        ^^^^^^^
System.Management.Automation.RemoteException
warning: unused import: `tokio::sync::Mutex`
 --> src\engine\grabber.rs:3:5
  |
3 | use tokio::sync::Mutex;
  |     ^^^^^^^^^^^^^^^^^^
System.Management.Automation.RemoteException
error[E0594]: cannot assign to `manager.cloud_tx`, as `manager` is not declared as mutable
   --> src\commands\download.rs:118:17
    |
118 |                 manager.cloud_tx = Some(uploader.tx);
    |                 ^^^^^^^^^^^^^^^^ cannot assign
    |
help: consider changing this to be mutable
    |
 99 |         let mut manager = DownloadManager::new_stream(
    |             +++
System.Management.Automation.RemoteException
error[E0063]: missing field `cloud_tx` in initializer of `DownloadManager`
  --> src\engine\manager.rs:59:9
   |
